# JEoMC

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  _tags  ast.ml  ast.mli  calc.ml  calc.tb  codegen.ml  demo.sh  draw  draw.c  draw.exec  draw2.c  drawTriangle.c  fail-draw-func1.diff  fail-draw-func1.err  fail-draw-func2.diff  fail-draw-func2.err  fail-draw-func3.diff  fail-printb.diff  fail-string-int-comparison.diff  jeomc.ml  jeomc_draw.c  jeomcparse.mly  parser.mly  sast.ml  scanner.mll  semant.ml  test-draw-shapes.out  testall.sh
demo/: basic_circle1.j  basic_circle2.j  basic_tri_cir1.j  deathly.j  loop-draw.j  loop-draw2.j  snowman.j  surprise.j  whileloop-plus.j
jeomc-tests/: fail-break.err  fail-break.j  fail-continue.err  fail-continue.j  fail-draw-func2.err  fail-draw-func2.j  fail-draw-func3.err  fail-draw-func3.j  fail-string-int-comparison.err  fail-string-int-comparison.j  fail-string.j  test-arith5.j  test-bool.j  test-bool.out  test-bool2.j  test-bool3.j  test-break2.j  test-continue.j  test-continue2.j  test-draw-save.j  test-draw-save.out  test-draw-shapes.j  test-draw1.j  test-draw1.out  test-draw2.j  test-draw2.out  test-empty-string.j  test-for-add.j  test-for-and.j  test-for-and.out  test-for-div.j  test-for-minus.j  test-for-mul.j  test-hello2.j  test-hello2.out  test-hex1.j  test-hex1.out  test-hex2.j  test-hex2.out  test-hex3.j  (+9 more)
microc-tests/: test-arith4.j
tests/: fail-break.j  fail-continue.j  fail-draw-func1.err  fail-draw-func1.j  fail-draw-func3.err  test-break.j  test-continue.j  test-draw-save.j  test-draw.j  (+3 more)
